WIP - fixed up profile page for formatting and fixed image cropper
form still submits with blank field

--- a/public/assets/bootstrap/css/bootstrap-override.css
+++ b/public/assets/bootstrap/css/bootstrap-override.css
@@ -1,7 +1,7 @@
-/*
-Created by: @themepixels
-URL: http://themepixels.com/
-*/
+abbr[title] {
+    border-bottom: none;
+    color: #D9534F;
+}
 
 label {
    font-weight: normal;
@@ -83,6 +83,8 @@ h4, .h4 {
 
 .form-group .control-label {
    margin-top: 3px;
+   text-align: right;
+   margin-right: 20px;
 }
 
 .form-bordered .form-group {
